--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "angular8-client-cloud-fire",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "start5001": "ng serve --port 5001 --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,6 +18,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "4.5.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
