--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "4.5.2",
     "compodoc": "0.0.41",
     "firebase": "^7.20.0",
