--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-# /dist
+/dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
+/angular8ClientCloudFire
+/angularClientCloudFire
 
 # dependencies
 /node_modules
