--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,14 @@
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#df00ad",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#00b3e6",
+    "statusBar.background": "#1accff",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#008bb3",
-    "titleBar.activeBackground": "#00b3e6",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#00b3e699",
-    "titleBar.inactiveForeground": "#15202b99"
+    "statusBarItem.hoverBackground": "#00b3e6",
+    "titleBar.activeBackground": "#008bb3",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#008bb399",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "tab.activeBorder": "#1accff"
   },
   "peacock.color": "#00b3e6"
 }
